# DMC-gamestore

./: .gitignore  README.md  pyproject.toml  requierments_test.txt
src/gamestore/: __main__.py  game_router.py  models.py
tests/: test_gamestore_game.py  test_gamestore_main.py
